[gd_scene load_steps=43 format=2]

[ext_resource path="res://level22/level2.gd" type="Script" id=1]
[ext_resource path="res://Bubblegum.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Line 1.png" type="Texture" id=4]
[ext_resource path="res://Rectangle 1.png" type="Texture" id=6]
[ext_resource path="res://Picsart_23-10-15_11-32-51-028.png" type="Texture" id=7]
[ext_resource path="res://wesdfzvd.jpg" type="Texture" id=8]
[ext_resource path="res://Picsart_23-10-15_14-12-18-446.png" type="Texture" id=9]
[ext_resource path="res://Picsart_23-10-15_11-09-17-182.png" type="Texture" id=10]
[ext_resource path="res://IMG-20231018-WA0002-removebg-preview.png" type="Texture" id=11]
[ext_resource path="res://Picsart_23-10-15_14-09-15-439.png" type="Texture" id=12]
[ext_resource path="res://CircularStd-Black.ttf" type="DynamicFontData" id=15]

[sub_resource type="DynamicFont" id=22]
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.466667, 0.298039, 0.937255, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=24]
size = 11
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0, 0.403922, 0.796078, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=9]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.662745, 0.803922, 0.737255, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.427451, 0.803922, 0.129412, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 9
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 5

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.976471, 0.976471, 0.976471, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=27]
size = 15
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.109804, 0.745098, 0.878431, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=21]
size = 15
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.54902, 0.435294, 0.866667, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.54902, 0.435294, 0.866667, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 19
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=10]
resource_name = "blink_animation"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Line2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1300.0
margin_bottom = 690.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="QuestionLabel" type="Label" parent="."]
margin_left = 227.0
margin_top = 6.0
margin_right = 976.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
align = 1
valign = 1

[node name="scoreLabel" type="Label" parent="."]
margin_left = 1147.0
margin_top = 23.0
margin_right = 1202.0
margin_bottom = 50.0
rect_scale = Vector2( 1.87855, 1.94462 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 24 )
custom_styles/normal = SubResource( 25 )
align = 1
valign = 1

[node name="submitButton2" type="Button" parent="."]
margin_left = 523.0
margin_top = 621.0
margin_right = 599.0
margin_bottom = 644.0
rect_scale = Vector2( 2.57641, 1.97665 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 31 )
custom_styles/normal = SubResource( 26 )
text = "SUBMIT"

[node name="laptop" type="Sprite" parent="."]
position = Vector2( 89.6002, 497.5 )
scale = Vector2( 0.126667, 0.135236 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="laptop"]
margin_left = -173.684
margin_top = 229.229
margin_right = 126.316
margin_bottom = 390.229
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "PC 1"
align = 1
valign = 1
uppercase = true

[node name="pc1IPInput" type="LineEdit" parent="."]
margin_left = 199.0
margin_top = 417.0
margin_right = 383.0
margin_bottom = 441.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
align = 1
max_length = 14
placeholder_text = "xxx.xxx.xxx.xx"
placeholder_alpha = 0.597
caret_blink_speed = 0.5

[node name="Label2" type="Label" parent="pc1IPInput"]
margin_left = -60.0
margin_top = 1.0
margin_right = -18.0001
margin_bottom = 18.0
rect_scale = Vector2( 1.31355, 1.65108 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "IP :"
align = 1
valign = 1
max_lines_visible = 3

[node name="pc1SubnetInput" type="LineEdit" parent="."]
margin_left = 199.0
margin_top = 455.0
margin_right = 383.0
margin_bottom = 479.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
align = 1
max_length = 13
placeholder_text = "xxx.xxx.xxx.x"

[node name="Label5" type="Label" parent="pc1SubnetInput"]
margin_left = -59.0
margin_top = -2.0
margin_right = -7.0
margin_bottom = 18.0
rect_scale = Vector2( 0.991504, 1.71053 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "SM :"
align = 1
valign = 1

[node name="pc1GatewayInput" type="LineEdit" parent="."]
margin_left = 199.0
margin_top = 493.0
margin_right = 383.0
margin_bottom = 517.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
align = 1
max_length = 14
placeholder_text = "xxx.xxx.xxx.xx"

[node name="Label4" type="Label" parent="pc1GatewayInput"]
margin_left = -53.0
margin_top = -1.0
margin_right = -12.9997
margin_bottom = 16.0
rect_scale = Vector2( 1.03149, 1.73094 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "GW :"
align = 1
valign = 1

[node name="pc1DNS1Input" type="LineEdit" parent="."]
margin_left = 199.0
margin_top = 531.0
margin_right = 383.0
margin_bottom = 555.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
align = 1
max_length = 7
placeholder_text = "x.x.x.x"

[node name="Label3" type="Label" parent="pc1DNS1Input"]
margin_left = -70.0
margin_top = 3.0
margin_right = -11.0
margin_bottom = 17.0
rect_scale = Vector2( 1.20202, 1.70597 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "DNS 1 :"
align = 1
valign = 1

[node name="pc1DNS2Input" type="LineEdit" parent="."]
margin_left = 199.0
margin_top = 569.0
margin_right = 383.0
margin_bottom = 593.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/normal = SubResource( 15 )
align = 1
max_length = 7
placeholder_text = "x.x.x.x"

[node name="Label" type="Label" parent="pc1DNS2Input"]
margin_left = -62.0
margin_top = -3.0
margin_right = -17.9996
margin_bottom = 14.0
rect_scale = Vector2( 1.20012, 1.77724 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "DNS 2 :"
align = 1
valign = 1

[node name="laptop2" type="Sprite" parent="."]
position = Vector2( 497.6, 510 )
scale = Vector2( 0.126667, 0.135236 )
texture = ExtResource( 9 )

[node name="Label11" type="Label" parent="laptop2"]
margin_left = -173.684
margin_top = 229.229
margin_right = 128.316
margin_bottom = 390.229
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "PC 2"
align = 1
valign = 1
uppercase = true

[node name="pc2IPInput" type="LineEdit" parent="."]
margin_left = 613.0
margin_top = 421.0
margin_right = 797.0
margin_bottom = 445.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
align = 1
max_length = 14
placeholder_text = "xxx.xxx.xxx.xx"

[node name="Label10" type="Label" parent="pc2IPInput"]
margin_left = -56.0
margin_top = -3.0
margin_right = -14.0
margin_bottom = 14.0
rect_scale = Vector2( 1.16891, 1.66746 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "IP :"
align = 1
valign = 1

[node name="pc2SubnetInput" type="LineEdit" parent="."]
margin_left = 613.0
margin_top = 455.0
margin_right = 797.0
margin_bottom = 479.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
align = 1
max_length = 13
placeholder_text = "xxx.xxx.xxx.x"

[node name="Label9" type="Label" parent="pc2SubnetInput"]
margin_left = -49.0
margin_top = -4.0
margin_right = -9.00003
margin_bottom = 13.0
rect_scale = Vector2( 0.909494, 1.67336 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "SM :"
align = 1
valign = 1

[node name="pc2GatewayInput" type="LineEdit" parent="."]
margin_left = 613.0
margin_top = 493.0
margin_right = 797.0
margin_bottom = 517.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
align = 1
max_length = 14
placeholder_text = "xxx.xxx.xxx.xx"

[node name="Label8" type="Label" parent="pc2GatewayInput"]
margin_left = -51.0
margin_top = -1.0
margin_right = -10.999
margin_bottom = 16.0
rect_scale = Vector2( 1.09164, 1.74481 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "GW :"
align = 1
valign = 1

[node name="pc2DNS1Input" type="LineEdit" parent="."]
margin_left = 613.0
margin_top = 531.0
margin_right = 797.0
margin_bottom = 555.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
align = 1
max_length = 7
placeholder_text = "x.x.x.x"

[node name="Label7" type="Label" parent="pc2DNS1Input"]
margin_left = -62.0
margin_top = -3.0
margin_right = -17.999
margin_bottom = 14.0
rect_scale = Vector2( 1.33722, 1.61817 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "DNS1 :"
align = 1
valign = 1

[node name="pc2DNS2Input" type="LineEdit" parent="."]
margin_left = 613.0
margin_top = 569.0
margin_right = 797.0
margin_bottom = 593.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
align = 1
max_length = 7
placeholder_text = "x.x.x.x"

[node name="Label6" type="Label" parent="pc2DNS2Input"]
margin_left = -61.0
margin_top = -3.0
margin_right = -17.0
margin_bottom = 14.0
rect_scale = Vector2( 1.28688, 1.70226 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "DNS2 :"
align = 1
valign = 1

[node name="laptop3" type="Sprite" parent="."]
position = Vector2( 913.6, 510 )
scale = Vector2( 0.126667, 0.135236 )
texture = ExtResource( 9 )

[node name="Label11" type="Label" parent="laptop3"]
margin_left = -173.684
margin_top = 229.229
margin_right = 128.316
margin_bottom = 390.229
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "PC 3
"
align = 1
valign = 1
uppercase = true

[node name="pc3IPInput" type="LineEdit" parent="."]
margin_left = 1029.0
margin_top = 421.0
margin_right = 1213.0
margin_bottom = 445.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
align = 1
max_length = 14
placeholder_text = "xxx.xxx.xxx.xx"

[node name="Label10" type="Label" parent="pc3IPInput"]
margin_left = -56.0
margin_top = -3.0
margin_right = -14.0
margin_bottom = 14.0
rect_scale = Vector2( 1.16891, 1.66746 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "IP :"
align = 1
valign = 1

[node name="pc3SubnetInput" type="LineEdit" parent="."]
margin_left = 1029.0
margin_top = 455.0
margin_right = 1213.0
margin_bottom = 479.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
align = 1
max_length = 13
placeholder_text = "xxx.xxx.xxx.x"

[node name="Label9" type="Label" parent="pc3SubnetInput"]
margin_left = -49.0
margin_top = -4.0
margin_right = -9.00003
margin_bottom = 13.0
rect_scale = Vector2( 0.909494, 1.67336 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "SM :"
align = 1
valign = 1

[node name="pc3GatewayInput" type="LineEdit" parent="."]
margin_left = 1029.0
margin_top = 493.0
margin_right = 1213.0
margin_bottom = 517.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
align = 1
max_length = 14
placeholder_text = "xxx.xxx.xxx.xx"

[node name="Label8" type="Label" parent="pc3GatewayInput"]
margin_left = -51.0
margin_top = -1.0
margin_right = -10.999
margin_bottom = 16.0
rect_scale = Vector2( 1.09164, 1.74481 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "GW :"
align = 1
valign = 1

[node name="pc3DNS1Input" type="LineEdit" parent="."]
margin_left = 1029.0
margin_top = 531.0
margin_right = 1213.0
margin_bottom = 555.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
align = 1
max_length = 7
placeholder_text = "x.x.x.x"

[node name="Label7" type="Label" parent="pc3DNS1Input"]
margin_left = -62.0
margin_top = -3.0
margin_right = -17.999
margin_bottom = 14.0
rect_scale = Vector2( 1.33722, 1.61817 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "DNS1 :"
align = 1
valign = 1

[node name="pc3DNS2Input" type="LineEdit" parent="."]
margin_left = 1029.0
margin_top = 569.0
margin_right = 1213.0
margin_bottom = 593.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
align = 1
max_length = 7
placeholder_text = "x.x.x.x"

[node name="Label6" type="Label" parent="pc3DNS2Input"]
margin_left = -61.0
margin_top = -3.0
margin_right = -17.0
margin_bottom = 14.0
rect_scale = Vector2( 1.28688, 1.70226 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "DNS2 :"
align = 1
valign = 1

[node name="modem" type="Sprite" parent="."]
position = Vector2( 593.8, 108.64 )
scale = Vector2( 0.368656, 0.283829 )
texture = ExtResource( 11 )

[node name="etherIPInput" type="LineEdit" parent="."]
margin_left = 521.25
margin_top = 154.0
margin_right = 705.25
margin_bottom = 178.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 27 )
custom_styles/normal = SubResource( 28 )
align = 1
max_length = 16
placeholder_text = "xxx.xxx.xxx.x/xx"

[node name="IPmodemLabel" type="Label" parent="etherIPInput"]
margin_left = -93.0
margin_top = -1.0
margin_right = 152.0
margin_bottom = 65.0
rect_scale = Vector2( 0.35152, 0.379049 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "IP (modem) :"
valign = 1

[node name="etherGatewayInput" type="LineEdit" parent="."]
margin_left = 521.25
margin_top = 191.0
margin_right = 705.25
margin_bottom = 215.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 27 )
custom_styles/normal = SubResource( 28 )
align = 1
max_length = 13
placeholder_text = "xxx.xxx.xxx.x"

[node name="GWmodemLabel" type="Label" parent="etherGatewayInput"]
margin_left = -97.9999
margin_top = -1.0
margin_right = 174.0
margin_bottom = 63.0
rect_scale = Vector2( 0.345266, 0.389458 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "GW (modem) :"
valign = 1

[node name="Label2" type="Label" parent="."]
anchor_left = -213.187
anchor_top = -12.2259
anchor_right = 128.44
anchor_bottom = -12.0072
margin_left = 768.0
margin_top = 141.0
margin_right = 876.0
margin_bottom = 178.0
rect_scale = Vector2( 1.2056, 0.930331 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "IP (ether 1):"
valign = 1

[node name="ipetherr3" type="Label" parent="Label2"]
margin_left = 101.194
margin_top = 2.14977
margin_right = 250.194
margin_bottom = 33.1498
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/normal = SubResource( 30 )
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
anchor_left = 61.208
anchor_top = -9.18568
anchor_right = 160.03
anchor_bottom = -9.18568
margin_left = 783.0
margin_top = 277.0
margin_right = 891.0
margin_bottom = 316.0
rect_pivot_offset = Vector2( 155.938, 18.4847 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "IP (ether 2):"
valign = 1

[node name="ipetherr2" type="Label" parent="Label"]
margin_left = 102.0
margin_top = 4.0
margin_right = 281.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
custom_styles/normal = SubResource( 29 )
align = 1
valign = 1

[node name="internet" type="Sprite" parent="."]
position = Vector2( 212.8, 122.64 )
scale = Vector2( 0.23, 0.199 )
texture = ExtResource( 10 )

[node name="line8" type="Sprite" parent="."]
position = Vector2( 880.15, 133.64 )
scale = Vector2( 92.74, 0.0163265 )
texture = ExtResource( 4 )

[node name="line2" type="Sprite" parent="."]
position = Vector2( 1110.8, 202.103 )
rotation = -3.14159
scale = Vector2( 0.749995, 0.575567 )
texture = ExtResource( 4 )

[node name="linee2" type="Sprite" parent="."]
position = Vector2( 1052, 381.679 )
rotation = -3.14159
scale = Vector2( 0.749995, 0.21325 )
texture = ExtResource( 4 )

[node name="line5" type="Sprite" parent="linee2"]
position = Vector2( 303.585, 115.891 )
rotation = 1.5708
scale = Vector2( 3.2265, 2.49832 )
texture = ExtResource( 4 )

[node name="mikrotik" type="Sprite" parent="."]
position = Vector2( 1113, 212 )
scale = Vector2( 0.241883, 0.185502 )
texture = ExtResource( 7 )

[node name="ether1Label" type="Label" parent="."]
margin_left = 911.0
margin_top = 105.0
margin_right = 978.0
margin_bottom = 132.0
rect_rotation = -360.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "ether 1"
align = 1
valign = 1

[node name="line4" type="Sprite" parent="."]
position = Vector2( 863.89, 270.64 )
rotation = 1.5708
scale = Vector2( 0.681458, 2.04174 )
texture = ExtResource( 4 )

[node name="line5" type="Sprite" parent="."]
position = Vector2( 366.654, 357 )
rotation = 1.5708
scale = Vector2( 0.681479, 1.88037 )
texture = ExtResource( 4 )

[node name="linee3" type="Sprite" parent="line5"]
position = Vector2( 35.0483, 122.049 )
rotation = 1.57079
scale = Vector2( 0.199822, 0.299736 )
texture = ExtResource( 4 )

[node name="linee" type="Sprite" parent="."]
position = Vector2( 596, 350.768 )
rotation = -3.14159
scale = Vector2( 0.749995, 0.453887 )
texture = ExtResource( 4 )

[node name="swicth" type="Sprite" parent="."]
position = Vector2( 599, 285.62 )
scale = Vector2( 0.147222, 0.126722 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="swicth"]
margin_left = -183.398
margin_top = -370.891
margin_right = 167.602
margin_bottom = -196.891
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "SWITCH"
align = 1
valign = 1

[node name="ether2Label" type="Label" parent="."]
margin_left = 887.0
margin_top = 244.0
margin_right = 959.0
margin_bottom = 265.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "ether 2"
align = 1
valign = 1

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 1149, 619 )
scale = Vector2( 0.590674, 1.1875 )
normal = ExtResource( 6 )

[node name="Label" type="Label" parent="TouchScreenButton"]
anchor_left = 0.5
anchor_top = -0.635
anchor_right = 0.5
anchor_bottom = -0.635
margin_left = -30.5
margin_top = 19.32
margin_right = 37.5
margin_bottom = 52.32
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "QUIT"

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 275.065, 132 )
scale = Vector2( 1.02166, 0.4 )
points = PoolVector2Array( 7, 0, 264, 0 )
default_color = Color( 0, 0, 0, 1 )
texture = ExtResource( 4 )
texture_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blink_animation = SubResource( 10 )

[connection signal="pressed" from="submitButton2" to="." method="_on_SubmitButton_pressed"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
